--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-responsive": "^10.0.0",
     "sweetalert2": "^11.13.3",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
