--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.0.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-responsive": "^10.0.0",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.13.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "use-debounce": "^10.0.4"
